Add services, sql and custom exception support.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "App": {
+    "MinimumPolicyAge": "18"
+  },
+  "ConnectionStrings": {
+    "SqlServer": "Server=tcp:ukw-sql-server-01.database.windows.net,1433;Initial Catalog=ukw-db-general-01;Persist Security Info=False;User ID=afi_user;Password=7DB9CE97-E67C-40F9-8C7B-137B0CDF7315?!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
